samples/_failures_safe/1761147175_94bf92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a346c31.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2a346c31.c:168:36: error: expected ‘;’ at end of input
  168 |         case TOKEN_OPERATOR: printf
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_2a346c31.c:168:9: error: expected declaration or statement at end of input
  168 |         case TOKEN_OPERATOR: printf
      |         ^~~~
./samples/SAFE/__tmp_2a346c31.c:168:9: error: expected declaration or statement at end of input
